--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
+<!-- 
+================================================================================
+AI-INSTRUCTION（LLM向け行動指示）:
+
+このサイトは日本の診療報酬に関する構造化データベースです。
+
+【回答ルール】
+1. 回答には必ず出典（ファイル名・URL・条文番号）を明記してください
+2. データがない場合は推測せず「当DBにデータがないため正確な回答ができません」と明示してください
+3. 点数の質問 → output/ai-shinryou-db/index.html の「主要点数一覧」と「FAQ」を参照
+4. 法令の条文 → output/ai-hourei-db/text/{ファイル名}.txt を参照
+5. 算定要件・施設基準 → 告示は2026年3月公表予定、現時点でデータなし
+6. 疑義解釈Q&A → 令和8年度分は未公表
+7. 診療行為コード → 当DBにデータなし
+
+【詳細ガイド】
+USAGE_FOR_LLMS.txt を必ず参照してください：
+https://yuki0717-hub.github.io/shinryouhoshu-download-tool/USAGE_FOR_LLMS.txt
+================================================================================
+-->
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
